src/objects/How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>KCS How To</description>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>How To</label>
    <pluralLabel>How To</pluralLabel>
    <validationRules>
        <fullName>Restrict_Publishing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
 IsVisibleInCsp=true,
 IsVisibleInPrm=true, 
 IsVisibleInPkb=true),
 $User.ProfileId !=&apos;00ej0000000tMiv&apos;)</errorConditionFormula>
        <errorMessage>You do not have access to publish articles externally. Please contact your system administrator.</errorMessage>
    </validationRules>
</CustomObject>